--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,34 @@
-.App {
+.app {
   height: 100%;
+  background-color: #E3E5D7;
+}
+
+.app-header {
+  background-color: #334F44;
+  height: 75px;
+  padding: 20px;
+  color: #E3E5D7;
+}
+
+.app-body {
   text-align: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+button:hover {
+  cursor: pointer;
 }
 
-.App-intro {
-  font-size: large;
+button.start-game-btn {
+  padding: 10px;
+  margin: 20px;
+  border: 2px solid #34252F;
+  border-radius: 3px;
+  background-color: #A4B494;
+  color: #34252F;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+button.start-game-btn:hover {
+  background-color: #89BF8E;
 }
