--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,34 +1,112 @@
 .app {
   height: 100%;
-  background-color: #E3E5D7;
+  background-image: url("../images/grass.jpg");
+  font-size: 16px;
 }
 
+/* HEADER STYLES */
 .app-header {
-  background-color: #334F44;
-  height: 75px;
-  padding: 20px;
-  color: #E3E5D7;
+  background: #9bcca4;
+  background: -webkit-linear-gradient(white, #9bcca4);
+  background: -o-linear-gradient(white, #9bcca4);
+  background: -moz-linear-gradient(white, #9bcca4);
+  background: linear-gradient(white, #9bcca4);
+  border: 1px solid black;
+  box-shadow: 0 1px 5px black;
+  height: 50px;
+  color: black;
+  display: flex;
+  align-items: center;
 }
 
+.mlp-logo {
+  height: 30px;
+  margin: 0 10px 0 5px;
+  display: inline;
+}
+
+.header-title {
+  font-size: 1.5rem;
+}
+
+.header-menu {
+  margin-left: auto;
+  padding-right: 5px;
+}
+
+/* BODY STYLES */
 .app-body {
   text-align: center;
 }
 
+.game-event-status-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  height: 25px;
+  background: white;
+  margin: 15px 7px 5px 7px;
+  border-radius: 5px;
+  border: 1px solid black;
+  box-shadow: 0 1px 5px black, 0 -1px 5px black;
+  -moz-box-shadow: 0 1px 5px black, 0 -1px 5px black;
+  -webkit-box-shadow: 0 1px 5px black, 0 -1px 5px black;
+  -khtml-box-shadow: 0 1px 5px black, 0 -1px 5px black;
+}
+
+.game-event-status-circle {
+  border-radius: 50%;
+  margin: 0 5px;
+  width: 15px;
+  height: 15px;
+  border: 2px solid black;
+}
+
+.game-event-status-circle.success {
+  background-color: #28ff3a;
+}
+
+.game-event-status-circle.pending {
+  background-color: #ffb414;
+}
+
+.game-event-status-circle.failed {
+  background-color: #ef0000;
+}
+
+.grass-container {
+  height: 150px;
+}
+
+.dirt-container {
+  background: url("../images/dirt.jpg");
+  box-shadow: 0 1px 5px black, 0 -1px 5px black;
+  -moz-box-shadow: 0 1px 5px black, 0 -1px 5px black;
+  -webkit-box-shadow: 0 1px 5px black, 0 -1px 5px black;
+  -khtml-box-shadow: 0 1px 5px black, 0 -1px 5px black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  height: 200px;
+}
+
+.content-title {
+  text-align: left;
+  padding: 5px;
+  font-size: 1.3rem;
+}
+
+.button-wrapper {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.game-event-button {
+  padding: 20px;
+  font-size: 1.3rem;
+  border-radius: 5px;
+}
+
 button:hover {
   cursor: pointer;
-}
-
-button.start-game-btn {
-  padding: 10px;
-  margin: 20px;
-  border: 2px solid #34252F;
-  border-radius: 3px;
-  background-color: #A4B494;
-  color: #34252F;
-  font-weight: 600;
-  font-size: 1.5rem;
-}
-
-button.start-game-btn:hover {
-  background-color: #89BF8E;
 }
