--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,28 +5,27 @@
   font-size: 16px;
 }
 
-.home-container {
-  height: 100%;
-  background-image: url("../images/blue-background.jpg");
+.m-top-3 {
+  margin-top: 30px;
 }
 
-.temp-home-title {
-  color: white;
-  font-size: 1.9rem;
-  text-align: center;
+.display-flex {
+  display: flex;
 }
 
-.temp-home-button {
-  padding: 30px;
-  background: white;
-  border-radius: 5px;
-  border: 1px solid black;
-  top: 50%;
-  position: relative;
-  width: 100px;
-  display: block;
-  margin: auto;
-  text-decoration: none;
-  color: black;
-  font-size: 1.5rem;
+@-webkit-keyframes rotating {
+  from{
+    -webkit-transform: rotate(0deg);
+  }
+  to{
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
+}
+
+button:hover {
+  cursor: pointer;
 }
