--- a/src/styles/baseball.css
+++ b/src/styles/baseball.css
@@ -34,11 +34,11 @@
     padding-right: 10px;
 }
 
-.header-menu i {
+.header-menu-icon {
     color: grey;
 }
 
-.header-menu i:hover, .header-menu i:focus {
+.header-menu-icon:hover, .header-menu-icon:focus {
     color: black;
     cursor: pointer;
 }
@@ -48,18 +48,22 @@
     background: white;
     border: 2px solid black;
     border-radius: 3px;
-    width: 100px;
+    width: 120px;
     right: 5px;
 }
 
 .header-menu-item {
-    display: block;
+    display: flex;
     padding: 5px 0;
     text-align: center;
     font-size: 1.2rem;
     text-decoration: none;
     color: black;
     border-bottom: 1px solid black;
+}
+
+.header-menu-item i {
+    margin: 0 15px 0 5px;
 }
 
 .header-menu-item:hover {
@@ -70,6 +74,15 @@
 .exit-item {
     color: red;
     border-bottom: none;
+}
+
+.start-page-button-wrapper {
+    text-align: center;
+}
+
+.start-page-button {
+    padding: 20px;
+    margin: 20px;
 }
 
 .game-event-status-container {
@@ -138,8 +151,4 @@
     padding: 20px;
     font-size: 1.3rem;
     border-radius: 5px;
-}
-
-button:hover {
-    cursor: pointer;
 }
