--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -43,6 +43,7 @@
     -moz-box-shadow: 0 1px 1px black, 0 -1px 1px black;
     -webkit-box-shadow: 0 1px 1px black, 0 -1px 1px black;
     -khtml-box-shadow: 0 1px 1px black, 0 -1px 1px black;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .home-button:hover {
@@ -60,6 +61,10 @@
 
 .launch-mbta-button {
     background: url("../images/train.jpg") repeat 50px 150px;
+}
+
+.launch-people-button {
+    background-image: url("../images/question_marks.jpg");
 }
 
 .home-loading-popup {
