--- a/src/styles/personPicker.css
+++ b/src/styles/personPicker.css
@@ -10,8 +10,25 @@
     text-align: center;
 }
 
+.add-person-input {
+    height: 30px;
+    padding-left: 5px;
+    line-height: 30px;
+    font-size: 1.5rem;
+    vertical-align: bottom;
+}
+
+.add-person-button {
+    height: 36px;
+    width: 36px;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
+    border: none;
+}
+
 .person-list {
     width: 50%;
     align-self: center;
     background: white;
 }
+
