--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,3 +33,16 @@
 button:hover {
   cursor: pointer;
 }
+
+.simple-header {
+  letter-spacing: 3px;
+  font-size: 1.9rem;
+  padding: 10px;
+}
+
+.home-button {
+  padding: 5px;
+  border-radius: 3px;
+  font-size: 1.1rem;
+  float: right;
+}
