--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,7 +9,6 @@
     font-size: 1.9rem;
     text-align: center;
     padding: 10px;
-    background: #9bcca4;
     border-bottom: 1px solid #A8C9D1;
     background: -webkit-linear-gradient(#8C29BD,  #284496);
     background: -o-linear-gradient(#8C29BD,  #284496);
@@ -28,10 +27,10 @@
     margin: 40px auto 0 auto;
 }
 
-.home-button {
+.home-app-button {
     padding: 15px 0;
     display: block;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     margin-top: 10px;
     text-align: center;
     border: 1px solid #808080;
@@ -43,10 +42,10 @@
     -moz-box-shadow: 0 1px 1px black, 0 -1px 1px black;
     -webkit-box-shadow: 0 1px 1px black, 0 -1px 1px black;
     -khtml-box-shadow: 0 1px 1px black, 0 -1px 1px black;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
 }
 
-.home-button:hover {
+.home-app-button:hover {
     cursor: pointer;
     letter-spacing: 5px;
     box-shadow: 0 1px 5px black, 0 -1px 5px black;
@@ -65,6 +64,11 @@
 
 .launch-people-button {
     background-image: url("../images/question_marks.jpg");
+}
+
+.launch-beer-boys-button {
+    background-image: url("../images/beer.jpg");
+    background-size: 60px;
 }
 
 .baseball-loading-popup {
