--- a/src/styles/beerBoys.css
+++ b/src/styles/beerBoys.css
@@ -17,3 +17,19 @@
     -webkit-box-shadow: 0 1px 5px #000;
     -khtml-box-shadow: 0 1px 5px #000;
 }
+
+.add-boy-wrapper {
+    width: 50%;
+    margin: 20px auto 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 0 1px 1px black, 0 -1px 1px black;
+    -moz-box-shadow: 0 1px 1px black, 0 -1px 1px black;
+    -webkit-box-shadow: 0 1px 1px black, 0 -1px 1px black;
+    -khtml-box-shadow: 0 1px 1px black, 0 -1px 1px black;
+}
