--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,86 +1,56 @@
 .home-container {
     height: 100%;
-    background-image: url("../images/dusk.png");
+    background: #F8FBFB;
 }
 
 .home-title {
-    color: #A8C9D1;
+    color: #F8FBFB;
     letter-spacing: 3px;
     font-size: 1.9rem;
-    text-align: center;
     padding: 10px;
-    border-bottom: 1px solid #A8C9D1;
-    background: -webkit-linear-gradient(#8C29BD,  #284496);
-    background: -o-linear-gradient(#8C29BD,  #284496);
-    background: -moz-linear-gradient(#8C29BD,  #284496);
-    background: linear-gradient(#8C29BD,  #284496);
-    box-shadow: 0 1px 5px #A8C9D1;
-    -moz-box-shadow: 0 1px 5px #A8C9D1;
-    -webkit-box-shadow: 0 1px 5px #A8C9D1;
-    -khtml-box-shadow: 0 1px 5px #A8C9D1;
+    border-bottom: 1px solid #011627;
+    background: #23A1EA;
 }
 
 .home-button-container {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 90%;
     margin: 40px auto 0 auto;
 }
 
-.home-app-button {
-    padding: 15px 0;
-    display: block;
-    letter-spacing: 3px;
-    margin-top: 10px;
+.app-tile-btn {
+    width: 200px;
+    margin: 20px;
     text-align: center;
-    border: 1px solid #808080;
-    text-decoration: none;
-    color: #FFFFFF;
-    font-size: 2rem;
-    border-radius: 3px;
-    box-shadow: 0 1px 1px black, 0 -1px 1px black;
-    -moz-box-shadow: 0 1px 1px black, 0 -1px 1px black;
-    -webkit-box-shadow: 0 1px 1px black, 0 -1px 1px black;
-    -khtml-box-shadow: 0 1px 1px black, 0 -1px 1px black;
-    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+    border: 2px solid #011627;
+    border-radius: 2px;
 }
 
-.home-app-button:hover {
-    cursor: pointer;
-    letter-spacing: 5px;
-    box-shadow: 0 1px 5px black, 0 -1px 5px black;
-    -moz-box-shadow: 0 1px 5px black, 0 -1px 5px black;
-    -webkit-box-shadow: 0 1px 5px black, 0 -1px 5px black;
-    -khtml-box-shadow: 0 1px 5px black, 0 -1px 5px black;
+.app-tile-btn-title {
+  border-bottom: 2px solid #011627;
+  padding: 5px 0;
+  background: #F6F7F8;
 }
 
-.launch-baseball-button {
-    background-image: url("../images/grass.jpg");
-}
-
-.launch-mbta-button {
-    background: url("../images/train.jpg") repeat 50px 150px;
-}
-
-.launch-people-button {
-    background-image: url("../images/question_marks.jpg");
-}
-
-.launch-beer-boys-button {
-    background-image: url("../images/beer.jpg");
-    background-size: 60px;
+.app-tile-btn-body {
+  height: 100px;
+  padding: 3px 0;
+  background: linear-gradient(#2EC4B6, #31D8C8);
+  line-height: 100px;
 }
 
 .baseball-loading-popup {
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    transform: translate(-50%,-50%);
-    height: 200px;
-    width: 350px;
-    font-size: 1.5rem;
-    text-align: center;
-    background: #3E4095;
-    border: 8px solid #ED3237;
-    border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%,-50%);
+  height: 200px;
+  width: 350px;
+  font-size: 1.5rem;
+  text-align: center;
+  background: #93A3B1;
+  border: 3px solid #011627;
+  border-radius: 5px;
 }
