--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@ html, body{
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
 }
 
 #root {
