--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
-html, body{
+html {
  height: 100%;
 }
 
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: Verdana, Geneva, sans-serif;
