--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,6 @@
 .home-container {
     height: 100%;
+    overflow: auto;
     background: linear-gradient(#F7FAF9, #F3F7F6);
 }
 
@@ -21,7 +22,7 @@
     margin: 40px auto 0 auto;
 }
 
-.app-tile-btn {
+.app-tile {
     width: 300px;
     margin: 20px;
     text-align: center;
@@ -29,30 +30,40 @@
     border-radius: 2px;
 }
 
-.app-tile-btn-title {
+.app-tile-title {
   border-bottom: 2px solid #031927;
   padding: 5px 0;
   background: #FCFAF9;
 }
 
-.app-tile-btn-body {
+.app-tile-body {
   height: 200px;
   background: #031927;
 }
 
-.app-tile-btn-body i {
+.app-tile-icon {
   line-height: 120px;
   font-size: 64px;
   color: #FCFAF9;
 }
 
 .app-tile-launch-btn {
+  font-size: 16px;
+  line-height: 16px;
   margin: auto;
   background: #A3BAC3;
   border: 1px solid #FCFAF9;
   border-radius: 2px;
   width: 100px;
   padding: 10px;
+}
+
+.app-tile-launch-btn i {
+  padding-right: 5px;
+}
+
+.app-tile-launch-btn-locked {
+  background: #c3a3ba;
 }
 
 .app-tile-launch-btn:hover {
