--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,10 @@
 html {
- height: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
+  overflow: auto;
   height: 100%;
   margin: 0;
   padding: 0;
