remove some image backgrounds

--- a/src/styles/beerBoys.css
+++ b/src/styles/beerBoys.css
@@ -1,6 +1,6 @@
 
 .beer-boys-container {
-    background: url('../images/beer.jpg');
+    background: #fff9ec;
     background-size: 50px;
     height: 100%;
 }
