--- a/src/styles/personPicker.css
+++ b/src/styles/personPicker.css
@@ -1,6 +1,6 @@
 
 .person-picker-container {
-    background: url('../images/question_marks.jpg');
+    background: #e2cccc;
     height: 100%;
 }
 
