use actual src for currently playing song

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,7 +6,7 @@
 
 .home-title {
     color: #FCFAF9;
-    height: 40px;
+    min-height: 40px;
     line-height: 40px;
     letter-spacing: 3px;
     font-size: 32px;
